# baseapp-backend

baseapp-notifications/: setup.cfg
baseapp-notifications/baseapp_notifications/: tasks.py  utils.py
