[metadata]
name = baseapp_notifications
version = 0.1.4
description = BaseApp Notifications
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    baseapp-core >= 0.2.3
    djmail >= 2.0
    django-notifications-hq >= 1.8
    django-channels-graphql-ws @ git+https://github.com/silverlogic/DjangoChannelsGraphqlWs.git@5378558e9137e4bd34f55bf478f2764c5ec453a9
    django-push-notifications[WP,APNS_ASYNC] @ git+https://github.com/vitorguima/django-push-notifications.git@0c92da4079b04ecd90954d1bde9c536795da02ba

[options.package_data]
baseapp_notifications =
    *.j2
    *.html
    *.png
